--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "dev-server": "nodemon server.js"
   },
   "author": "Logan Wood",
   "license": "MIT",
